[package]
name = "certstream-server-rust"
version = "1.0.2"
edition = "2024"
repository = "https://github.com/burakozcn01/certstream-server-rust"
license = "MIT"
description = "High-performance Certificate Transparency log streaming server"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
tower_governor = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
x509-parser = "0.16"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
thiserror = "2"
sha2 = "0.10"
bytes = "1.10"
parking_lot = "0.12"
smallvec = { version = "1.15", features = ["serde"] }
regex = "1.11"
memchr = "2.7"
tokio-stream = { version = "0.1", features = ["sync"] }
backon = "1"
dashmap = "6"
notify = { version = "7", features = ["macos_kqueue"] }
subtle = "2.6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
